<resources>
    <string name="app_name">SlayTheSpire</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_singup">LoginSingupActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_sign">LoginSignActivity</string>
    <string name="title_activity_login_signup">LoginSignupActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="not_an_account_yet_swipe_right_to_sign_up">Not an account yet? Swipe right to sign up</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_a_member_swipe_left_to_login">Already a member? Swipe left to login</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_friend_request">FriendRequestActivity</string>
    <string name="title_activity_card">Card</string>
    <string name="phone">Phone</string>
    <string name="you_already_have_an_account_swipe_left_to_sign_in">You already have an account? Swipe left to sign in.</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="ironclad_name">Ironclad</string>
    <string name="ironclad_health">HP: 80/80</string>
    <string name="ironclad_gold">Gold: 109</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="level">Level: %1$s</string>
    <string name="matches">Matches: %1$s</string>
    <string name="points">Points: %1$s</string>
    <string name="silent_name">Silent</string>
    <string name="silent_health">HP: 70/70</string>
    <string name="silent_gold">Gold: 99</string>
    <string name="defect_name">Defect</string>
    <string name="defect_health">HP: 75/75</string>
    <string name="defect_gold">Gold: 99</string>
    <string name="title_activity_friend_rqst">FriendRqstActivity</string>
    <string name="invalid_login">Invalid account information</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="minimun_pass">The password must have at least 5 digits</string>
    <string name="error_firebase">Error with Firebase</string>
    <string name="invalid_signup">Invalid data</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="play">Play</string>
    <string name="gold_109">Gold: 109</string>
    <string name="pv_80_80">PV: 80/80</string>
    <string name="select_your_character">Select your character</string>
    <string name="locked">This player in locked, its only an Alpha version :D</string>
    <string name="not_yourself">You can´t add yourself as friend</string>
    <string name="is_your_friend_already">is already your friend</string>
    <string name="to_your">to your friend list</string>
    <string name="you_added">You have added</string>
    <string name="error_info">must implement OnFragmentInteractionListener</string>
    <string name="signupbutton_2">sign up button</string>
    <string name="about_the_game">About the game</string>
    <string name="about_us_us">This game is an Alpha version of Slay the Spire and you can play with only one of the 3 main characters. It is also possible to see the collection of cards of that character, see the global classification and add friends. To scroll through the menu you can use the lower navigation bar or you can move freely through the different screens of the app.</string>
</resources>
